switched from LinkedList to ArrayDeque